Added Header Lines in Some Posts

--- a/_posts/2018-08-21-apples.md
+++ b/_posts/2018-08-21-apples.md
@@ -2,7 +2,7 @@
 
 layout: post
 club: prakriti
-
+header_line: "An apple a day keeps the doctor away"
 ---
 
 An apple is a sweet, edible fruit produced by an apple tree.
