Updated Post README

--- a/_posts/2019-04-25-readme.md
+++ b/_posts/2019-04-25-readme.md
@@ -17,7 +17,8 @@ To create a new post, follow the given steps:
     header-line <optional>: "To be displayed below the headline"
     ---
 ```
-4. Save your file in the _posts directory in the format `yyyy-mm-dd-title.md`
+4. The club name should be the same as the name of the club which shall present this post. The name should be written in lowercase, without spaces.
+5. Save your file in the `_posts` directory in the format `yyyy-mm-dd-title.md`
 
 ### Additional Notes:
 In case you want to have an image at the top of your post, *DO NOT* attach the image on the top of the post. Instead, 
